add main results, methods, extended methods

--- a/content/01.abstract.md
+++ b/content/01.abstract.md
@@ -1,3 +1,3 @@
 ## Abstract {.page_break_before}
 
-
+The gastrointestinal tract and nervous system are intricately linked, and neuroactive compounds in the gut may shape the developing brain. In this cross-sectional study of over 300 children, we find that the abundance of microbial genes for the metabolism of GABA, glutamate, and other neuroactive molecules in the gut are associated with differences in the development of diverse brain regions and overall cognitive ability.
