--- a/content/02.results.md
+++ b/content/02.results.md
@@ -3,7 +3,8 @@
 Both the brain and microbiome of humans
 develop rapidly in the first years of life,
 enabling extensive signaling between the gut
-and central nervous system (dubbed the “gut brain axis”1,2).
+and central nervous system (dubbed the “gut-brain axis”
+1,2).
 While emerging evidence implicates gut microorganisms
 and microbiota composition
 and cognitive outcomes in neurodevelopmental disorders (e.g., autism),
@@ -17,7 +18,7 @@ we collected stool samples from
 enrolled in the RESONANCE study of child development -
 part of the NIH Environmental Influences on Child Health Outcomes (ECHO) Initiative
 (Table 1).
-RESONANCE is an observational longitudinal study
+RESONANCE is a longitudinal observational study
 of healthy and neurotypical brain development
 that spans the fetal and infant to adolescent life stages,
 combining neuroimaging (magnetic resonance imaging, MRI),
@@ -98,7 +99,7 @@ As in previous adult and infant cohorts,
 functional beta diversity was generally lower than taxonomic diversity
 (Supplementary Figure 1),
 suggesting that healthy guts select for similar gene functions
-even when those functions are contributed by different species.
+even when different species contribute those functions.
 However,
 this interpretation may be complicated
 by the fact that as many as 50% of sequencing reads in some samples
@@ -156,7 +157,7 @@ in microbial taxonomic and functional profiles
 Subject type (child or mother)
 accounted for a large amount of variation
 (4-6% q < 0.001),
-but this effect drops to 2%
+but this effect dropped to 2%
 when children under 2 years of age were excluded,
 suggesting that age, rather than subject type,
 is actually responsible for driving the taxonomic and functional variation.
@@ -171,7 +172,7 @@ is primarily driven by the enormous changes in the microbiome
 over the first year.
 Microbiome taxonomic and functional variation
 was also associated with moderate but significant differences
-in several neurocognitive measures including
+in several neurocognitive measures, including
 age-appropriate measures of cognitive ability
 ([2.04%, 2.08%], q < 0.01, N=263).
 We also found significant associations
@@ -289,7 +290,7 @@ but continues to grow into adulthood
 making it especially vulnerable for disorder and disease
 23.
 Specifically,
-neurodevelopmental disorders, such as autism spectrum disorder
+neurodevelopmental disorders, such as autism spectrum disorder,
 have been associated with an imbalance of the inhibitory/ excitatory system
 regulated by glutamate and GABA,
 with recent evidence suggesting
@@ -312,9 +313,9 @@ This study is ongoing,
 and we are collecting additional clinical data
 such as participant genetic profiles,
 lead exposure,
-air quality data
+air quality data,
 and more
-in order to understand how
+to understand how
 the environment, microbiome, and biological development
 interact to shape neurocognition.
 Future studies
@@ -322,7 +323,7 @@ assessing gut metabolite pools
 combined with MR spectroscopic methods
 to quantify concentrations of neurotransmitters such as GABA and glutamate
 in the brain,
-as well humanized mouse models and longitudinal human data
+as well humanized mouse models and longitudinal human data,
 will provide further insight
 into the interactions of microbial metabolism
 and neurocognitive development.
