--- a/content/03.methods.md
+++ b/content/03.methods.md
@@ -30,7 +30,7 @@ feeding behavior (breast- and formula-feeding),
 and child weight and height,
 were collected through questionnaires or direct examination as appropriate.
 All data were collected at every assessment visit,
-which was scheduled on the same day of the MRI scan
+scheduled on the same day of the MRI scan
 or within 2 weeks of the scan date.
 
 ## Approval for human patient research
