add figure attempt

--- a/content/02.results.md
+++ b/content/02.results.md
@@ -25,7 +25,7 @@ combining neuroimaging (magnetic resonance imaging, MRI),
 neurocognitive assessments,
 bio-specimen analyses,
 and rich demographic, socioeconomic, family and medical history information
-(Supplementary Figure 1).
+(Supplementary Figure 1 @fig:suppfig1).
 
 ## Table 1 - Baseline characteristics of ECHO RESONANCE participants
 
@@ -52,77 +52,43 @@ to generate taxonomic and functional profiles
 for each of our maternal and child fecal samples.
 Participant age was the greatest driver
 of both taxonomic and functional diversity,
-as expected (Figure 1a, b).
+as expected (Figure @fig:figure1 a, b).
 Children under one year of age
 formed a distinct cluster from older children,
 characterized by high aerobe load and low alpha (within-sample) diversity
-(Figure 1b, Supplementary Figure 1),
+(Figure @fig:figure1 b, Supplementary Figure 1 @fig:suppfig1),
 and samples from children over two years old
 were similar to maternal samples
-(Figure 1a, c, Supplementary Figure 1a).
-
-## Figure 1: The gut microbiome of children is associated with neurocognition.
-
-a, Principal coordinates analysis (PCoA) for all subjects
-   based on species-level Bray-Curtis dissimilarity;
-   most variation is driven by age and the presence of Prevotella(3,4).
-b, PCoA for all subjects
-   based on Bray-Curtis dissimilarity in functional profiles
-   (UniRef90 accessory genes)
-   after removing gene families that were present in >90% of subjects
-   in a given age group;
-   variation driven by similar effects as for taxonomic profiles.
-c, First principle coordinate axis of species PCoA for child samples vs age;
-   younger children cluster away from older children,
-   and are lower in diversity.
-d, First principle coordinate axis of accessory gene family PCoA
-   for child samples vs age;
-   functional diversity increases with age.
-e, PERMANOVA analysis for selected subject metadata
-   and Bray-Curtis dissimilarity for species-level taxonomic profiles
-   or functional profiles
-   using Kegg-Orthology
-(KO),
-Pfams or accessory UniRef90s;
-   subject and subject type include all subjects,
-   2+ includes only children over 2 years old,
-   others include all children for which the measure was available;
-   stars indicate significance after Benjamini-Hochberg FDR correction
-   (* <0.1, ** < 0.01, *** < 0.001).
-f, Child age vs normalized cognitive function score;
-   age-appropriate assessments
-   achieve similar score distributions for their age groups.
-g, FSEA analysis for gene sets with neuroactive potential
-   (see Methods).
+(Figure @fig:figure1 a, c, Supplementary Figure 1 @fig:suppfig1).
 
 As in previous adult and infant cohorts,
 functional beta diversity was generally lower than taxonomic diversity
-(Supplementary Figure 1),
+(Supplementary Figure 1 @fig:suppfig1),
 suggesting that healthy guts select for similar gene functions
 even when different species contribute those functions.
 However,
 this interpretation may be complicated
 by the fact that as many as 50% of sequencing reads in some samples
 are not mapped to any of the reference genes used,
-and are thus unclassified (Figure 1b).
+and are thus unclassified (Figure @fig:figure1 b).
 Interestingly,
 though children under 1 tended to have substantially fewer species
 and, therefore,
 fewer total genes
-(Figure 1d, right),
+(Figure @fig:figure1 d, right),
 those genes tended to be better characterized
-(Figure 1b, d)5.
+(Figure @fig:figure1 b, d)5.
 Consistent with previous studies
 of adult cohorts from industrialized countries4,
 another major driver of variation visible from principal coordinates analysis
 was the presence of Prevotella copri
-(Supplementary Figure 3).
+(Supplementary Figure 3 @fig:suppfig3).
 Like samples from very young children,
 samples with P.
 copri had reduced diversity
 compared with samples from older children and pregnant mothers without P.
 copri
-(Figure 1a, Supplementary Figure 3).
+(Figure @fig:figure1 a, Supplementary Figure 3 @fig:suppfig3).
 Overall,
 these results are consistent with prior studies
 of adult and childhood gut microbiomes.
@@ -131,7 +97,7 @@ To assess the potential role of the microbiome
 in these neurocognitive processes,
 child stool samples were collected
 alongside MRI and age-appropriate neurocognitive evaluations
-(Figure 1f).
+(Figure @fig:figure1 f).
 Throughout childhood,
 a child’s brain undergoes remarkable
 anatomical, microstructural, organization, and functional
@@ -153,7 +119,7 @@ Consistent with previous studies,
 inter-individual variation accounted for the majority of variation
 in microbial taxonomic and functional profiles
 ([79%, 77%], q < 0.001)
-(Figure 1e, Supplementary Table 1).
+(Figure @fig:figure1 e, Supplementary Table 1).
 Subject type (child or mother)
 accounted for a large amount of variation
 (4-6% q < 0.001),
@@ -166,7 +132,7 @@ age accounted for over 20% of variation
 in both taxonomic and functional profiles,
 but this effect also largely disappeared
 when children under 2 were excluded
-(Figure 1e, Supplementary Table 1),
+(Figure @fig:figure1 e, Supplementary Table 1),
 suggesting that the age effect
 is primarily driven by the enormous changes in the microbiome
 over the first year.
@@ -191,7 +157,7 @@ even after controlling for the effect of age on brain volume.
 These results suggest
 that there is a strong relationship
 between the gut microbiome and neurocognitive development
-(Figure 1e).
+(Figure @fig:figure1 e).
 Though the direction of causality cannot be determined,
 experimental models of brain development neurological disorders
 have demonstrated that microbes in the intestine
@@ -210,7 +176,7 @@ We analyzed the association of each of these gene sets
 with our neurocognitive measures
 using feature set enrichment analysis (FSEA)
 16,17
-(Figure 1g, Supplementary Table 2).
+(Figure @fig:figure1 g, Supplementary Table 2).
 Briefly, we calculated the Pearson correlation
 between the relative abundance of all identified UniRef90 gene families
 with each neurocognitive measure,
@@ -225,7 +191,7 @@ and the size of brain subregions.
 In particular,
 microbial genes for GABA synthesis
 were positively associated with
-neocortical (q < 0.01, Figure 1g, Supplementary Table 2),
+neocortical (q < 0.01, Figure @fig:figure1 g, Supplementary Table 2),
 subcortical (q < 0.01),
 and limbic (q < 0.001) volume,
 and negatively associated with
@@ -244,7 +210,7 @@ are associated with brain development.
 Unlike the metabolism of GABA,
 glutamate synthesis and degradation genes
 have an inverse relationship
-(Figure 1g, Supplementary Table 2).
+(Figure @fig:figure1 g, Supplementary Table 2).
 The glutamate degradation gene set
 was negatively associated with
 cognitive function (q < 1e-4)
@@ -331,3 +297,68 @@ As we continue to follow these subjects,
 we will be able to identify how early life microbial exposures,
 including exposures of mothers in utero,
 might affect future neurocognitive outcomes.
+
+![
+**The gut microbiome of children is associated with neurocognition.**
+
+**a**, Principal coordinates analysis (PCoA) for all subjects
+   based on species-level Bray-Curtis dissimilarity;
+   most variation is driven by age and the presence of Prevotella(3,4).
+**b**, PCoA for all subjects
+   based on Bray-Curtis dissimilarity in functional profiles
+   (UniRef90 accessory genes)
+   after removing gene families that were present in >90% of subjects
+   in a given age group;
+   variation driven by similar effects as for taxonomic profiles.
+**c**, First principle coordinate axis of species PCoA for child samples vs age;
+   younger children cluster away from older children,
+   and are lower in diversity.
+**d**, First principle coordinate axis of accessory gene family PCoA
+   for child samples vs age;
+   functional diversity increases with age.
+**e**, PERMANOVA analysis for selected subject metadata
+   and Bray-Curtis dissimilarity for species-level taxonomic profiles
+   or functional profiles
+   using Kegg-Orthology (KO),
+   Pfams or accessory UniRef90s;
+   subject and subject type include all subjects,
+   2+ includes only children over 2 years old,
+   others include all children for which the measure was available;
+   stars indicate significance after Benjamini-Hochberg FDR correction
+   (* <0.1, ** < 0.01, *** < 0.001).
+**f**, Child age vs normalized cognitive function score;
+   age-appropriate assessments
+   achieve similar score distributions for their age groups.
+**g**, FSEA analysis for gene sets with neuroactive potential
+   (see Methods).
+](images/figure1-makie.jpg){fig:figure1}
+
+![
+**Supplementary Figure 1**
+Pairwise Bray-Curtis dissimilarities
+for each age group for
+species (a),
+accessory UniRef90s (b),
+Pfams (c),
+and KOs (d).
+](images/suppfigure1.jpeg){fig:suppfig1}
+
+![
+**Supplementary Figure 2**
+Accompanies Figure 1a-d.
+Taxonomic (a) and functional (b) profile PCoAs,
+colored by age group.
+](images/suppfigure2.jpeg){fig:suppfig2}
+
+![
+**Supplementary Figure 3**
+Accompanies Figure 1a.
+Taxonomic profile colored by the relative abundance of Prevotella copri.
+](images/suppfigure3.jpeg){fig:suppfig3}
+
+![
+**Supplementary Figure 4**
+Accompanies Figure 1g.
+Distributions of the correlations of neurocognitive measures
+with all UniRef90 gene families.
+](images/suppfigure4.jpeg){fig:suppfig4}
