--- a/content/02.results.md
+++ b/content/02.results.md
@@ -207,6 +207,7 @@ This may be due to higher GABA synthesis
 selecting for the ability to catabolize this molecule,
 making it difficult to assess how actual GABA concentrations in the gut
 are associated with brain development.
+
 Unlike the metabolism of GABA,
 glutamate synthesis and degradation genes
 have an inverse relationship
@@ -300,7 +301,6 @@ might affect future neurocognitive outcomes.
 
 ![
 **The gut microbiome of children is associated with neurocognition.**
-
 **a**, Principal coordinates analysis (PCoA) for all subjects
    based on species-level Bray-Curtis dissimilarity;
    most variation is driven by age and the presence of Prevotella(3,4).
@@ -331,7 +331,7 @@ might affect future neurocognitive outcomes.
    achieve similar score distributions for their age groups.
 **g**, FSEA analysis for gene sets with neuroactive potential
    (see Methods).
-](images/figure1-makie.jpg){fig:figure1}
+](images/figure1-makie.jpg){#fig:figure1}
 
 ![
 **Supplementary Figure 1**
@@ -341,24 +341,24 @@ species (a),
 accessory UniRef90s (b),
 Pfams (c),
 and KOs (d).
-](images/suppfigure1.jpeg){fig:suppfig1}
+](images/suppfigure1.jpeg){#fig:suppfig1}
 
 ![
 **Supplementary Figure 2**
 Accompanies Figure 1a-d.
 Taxonomic (a) and functional (b) profile PCoAs,
 colored by age group.
-](images/suppfigure2.jpeg){fig:suppfig2}
+](images/suppfigure2.jpeg){#fig:suppfig2}
 
 ![
 **Supplementary Figure 3**
 Accompanies Figure 1a.
 Taxonomic profile colored by the relative abundance of Prevotella copri.
-](images/suppfigure3.jpeg){fig:suppfig3}
+](images/suppfigure3.jpeg){#fig:suppfig3}
 
 ![
 **Supplementary Figure 4**
 Accompanies Figure 1g.
 Distributions of the correlations of neurocognitive measures
 with all UniRef90 gene families.
-](images/suppfigure4.jpeg){fig:suppfig4}
+](images/suppfigure4.jpeg){#fig:suppfig4}
